Fixes notice-container z-index issue

--- a/assets/_styles/components/notice.scss
+++ b/assets/_styles/components/notice.scss
@@ -11,6 +11,7 @@
   left: 0;
   width: 95%;
   margin: 0 2.5%;
+  z-index: 2;
   @media (min-width:640px) {
     left: 50%;
     width: 100%;
